test/tests/stages/18_structures/invalid_parse/var_decl_bad_tag_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  struct
  identifier(s)
  {
  int
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  (
  identifier(s)
  )
  identifier(var)
  ;
  return
  const int(0)
  ;
  }
